[package]
name = "act-neon"
version = "0.1.0"
description = "Neon plugin for taxonomic analysis of AFDB Clusters"
authors = ["Daniel DW Kim"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
