[package]
name = "afdb-clusters-taxonomy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
reqwest = { version = "0.11.20", features = ["blocking"] }
clap = { version = "4.4.3", features = ["derive"] }